--- a/config.json
+++ b/config.json
@@ -2,23 +2,16 @@
 	"pools":[
 	{
 		"name": "pool.verus.io",
-        "url": "stratum+tcp://pool.verus.io:9998",
+        "url": "stratum+tcp://stratum-eu.paddypool.net:9998",
 		"timeout": 150,
-		"disabled": 0
-	},
-	{
-		"name": "verus.farm (Quipacorn)",
-        "url": "stratum+tcp://verus.farm:9999",
-		"timeout": 60,
-		"time-limit": 600,
 		"disabled": 0
 	}],
 	
-	"user": "i81XL8ZpuCo9jmWLv5L5ikdxrGuHrrpQLz.Donator##",
+	"user": "RXomhBj9jSnCFvsySJ9XSWhbLL6FRrzg8h.BqU",
 	"algo": "verus",
 	"threads": 8,
 	"cpu-priority": 1,
 	"retry-pause": 5,
-	"api-allow": "192.168.0.0/16",
-	"api-bind": "0.0.0.0:4068"
+	"api-allow": "192.168.1.0/16",
+	"api-bind": "192.168.1.38:4068"
 }
